Fixed an issue with the footer wrong margin

--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
-  padding: 145px 0 20px 0;
+  padding: 40px 0 20px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
